# lib-plugin-host

./: Cargo.toml  README.md
src/: callbacks.rs  command_index.rs  config.rs  error.rs  host.rs  installed.rs  installer.rs  lib.rs  loader.rs  loader_v3.rs  manager_v3.rs  service_registry.rs
