[package]
name = "lib-plugin-host"
version.workspace = true
edition.workspace = true
license = "MIT"
authors.workspace = true
description = "Plugin host for loading and managing v3 plugins"
repository = "https://github.com/adi-family/lib-plugin"
keywords = ["plugin", "host", "dynamic-loading"]
categories = ["development-tools"]

[dependencies]
lib-plugin-abi-v3 = { path = "../lib-plugin-abi-v3" }
lib-plugin-manifest.workspace = true
lib-plugin-verify.workspace = true
lib-plugin-registry.workspace = true
libloading.workspace = true
tokio.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true
serde_json = "1.0"
